# cpp_dev_template

./: .gitignore  CMakeLists.txt  build.sh  install_deps.sh  test.sh
include/: sample.hpp
src/: CMakeLists.txt  another_main.cpp  main.cpp
test/: CMakeLists.txt  test.cpp  test2.cpp
